--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,22 @@
 </head>
 <body>
 
-<div class="wrapper" id="breweries">
-
+<div class="wrapper">
+        <div>
+            <div id="breweries"></div>
+        </div>
 </div>
+<div class="wrapper">
+    <div>
+        <div id="breweries"></div>
+    </div>
+</div>
+<div class="wrapper">
+    <div>
+        <div id="breweries"></div>
+    </div>
+</div>
+
 
 </body>
 <script src="./serveseria.js"></script>
